--- a/packages/arwes/package.json
+++ b/packages/arwes/package.json
@@ -16,16 +16,16 @@
     "react",
     "jss"
   ],
+  "homepage": "https://arwesjs.org",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arwesjs/arwes.git"
   },
-  "bugs": {
-    "url": "https://github.com/arwesjs/arwes/issues"
-  },
-  "author": "Romel Pérez (romelperez.com)",
   "license": "MIT",
-  "homepage": "https://arwesjs.org",
+  "files": [
+    "src",
+    "lib"
+  ],
   "main": "lib/index.js",
   "dependencies": {
     "@arwes/sounds": "^1.0.0-alpha.1",
@@ -34,11 +34,9 @@
     "d3-shape": "^1.2.0",
     "detect-node": "^2.0.3",
     "extend": "^3.0.1",
-    "polished": "^1.8.1",
+    "polished": "^1.9.3",
     "prismjs": "^1.8.4",
     "prop-types": "*",
-    "react-jss": "^8.3.3",
-    "react-transition-group": "^2.2.1",
-    "theming": "^1.3.0"
+    "react-transition-group": "^2.2.1"
   }
 }
